ready project